@@ -1,0 +1,15 @@
+// -*- mode:C++; tab-width:4; c-basic-offset:4; indent-tabs-mode:nil -*-
+
+/*
+ * Copyright: (C) 2011 Paul Fitzpatrick
+ * CopyPolicy: Released under the terms of the LGPLv2.1 or later, see LGPL.TXT
+ */
+
+#ifndef SHAREHELLO_INC
+#define SHAREHELLO_INC
+
+#include <yarp/os/SharedLibraryClass.h>
+
+YARP_DECLARE_SHARED_CLASS(hello_there);
+
+#endif
